[s390] Various minor bug fixes and adaptions.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b150
    • s390x

      After the inital s390 port we intensified our testing and detected some minor issues. Also, this contains some adaptions to make jtreg tests pass.

      s390.ad
      Fix rule indexOfChar_U.

      c1_LIRAssembler_s390.cpp
      Register overwritten in heap based compressed oops mode. We never see this mode on our systems, but it is a possible configuration.

      templateTable_s390.cpp:
      Wrong register passed as argument to call_VM

      frame_s390.cpp, frame_s390.inline.hpp. os_linux_s390.cpp
      Some adaptions for "8151956: Support non-continuous CodeBlobs in HotSpot"

      Remove flag UseCountLeadingZerosInstruction. This instruction is available on all supported s390 cpus, and the tests for this flag depend on a string in the x86 cpu feature list.

      vm_version_s390.cpp
      Add 'aes' and 'sha' to cpu feature string if the corresponding extensions are implemented on the current cpu. Needed for jtreg tests.

      os_linux_s390.cpp
      Fix frame popping for debug / fastdebug build. Else NMT tests fail.

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: