8169317: [s390] Various minor bug fixes and adaptions

Reviewed-by: mdoerr